--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -48,6 +48,6 @@
 		<key>UIViewControllerBasedStatusBarAppearance</key>
 		<false/>
 		<key>UIStatusBarHidden</key>
-		<false/>
+		<true/>
 	</dict>
 </plist>
