--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,12 +73,12 @@ dev_dependencies:
   build_runner: ^2.1.7
 
   #splash
-  flutter_native_splash: ^1.3.2
+  #flutter_native_splash: ^1.3.2
 
 # 변경사항 필요시 flutter pub run flutter_native_splash:create 와 remove 사용
 # 변경시에 ** 먼저 remove로 지워준 후 변경사항이 된 버전을 다시 create로 등록해야 함 주의 **
 
-flutter_native_splash:
+#flutter_native_splash:
 
   # This package generates native code to customize Flutter's default white native splash screen
   # with background color and splash image.
@@ -91,7 +91,7 @@ flutter_native_splash:
   # of your splash screen to a solid color.  Use background_image to set the background of your
   # splash screen to a png image.  This is useful for gradients. The image will be stretch to the
   # size of the app. Only one parameter can be used, color and background_image cannot both be set.
-  color: "#ff9595"
+  #color: "#ff9595"
   #background_image: "assets/background.png"
 
   # Optional parameters are listed below.  To enable a parameter, uncomment the line by removing
@@ -99,7 +99,7 @@ flutter_native_splash:
 
   # The image parameter allows you to specify an image used in the splash screen.  It must be a
   # png file and should be sized for 4x pixel density.
-  image: assets/images/YaksokLogo.png
+  #image: assets/images/YaksokLogo.png
 
   # The branding property allows you to specify an image used as branding in the splash screen.
   # It must be a png file. Currently, it is only supported for Android < v12 and iOS.
@@ -122,7 +122,7 @@ flutter_native_splash:
   # Android 12 handles the splash screen differently than previous versions.  Please visit
   # https://developer.android.com/guide/topics/ui/splash-screen
   # Following are Android 12 specific parameter.
-  android_12:
+  #android_12:
   # The image parameter sets the splash screen icon image.  If this parameter is not specified,
   # the app's launcher icon will be used instead.
   # Please note that the splash screen will be clipped to a circle on the center of the screen.
@@ -171,7 +171,7 @@ flutter_native_splash:
   #       To show the notification bar, add the following code to your Flutter app:
   #       WidgetsFlutterBinding.ensureInitialized();
   #       SystemChrome.setEnabledSystemUIOverlays([SystemUiOverlay.bottom, SystemUiOverlay.top]);
-  fullscreen: true
+  #fullscreen: true
 
   # If you have changed the name(s) of your info.plist file(s), you can specify the filename(s)
   # with the info_plist_files parameter.  Remove only the # characters in the three lines below,
