--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   hive: ^2.0.5
   hive_flutter: ^1.1.0
 
+  #app review
+  in_app_review: ^2.0.4
+
 
 dev_dependencies:
   flutter_test:
