--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,9 @@ dependencies:
   google_maps_flutter: ^2.1.5
 
   location: ^4.2.0
-  geolocator: ^5.0.0
+  fluttertoast: ^8.0.9
+  flutter_google_places: ^0.3.0
+  geolocator: ^8.2.1
 
 
 dev_dependencies:
