--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,31 +1,13 @@
 name: yaksok_project
 description: A new Flutter project.
 
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 1.0.0+1
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
+
 dependencies:
   flutter:
     sdk: flutter
@@ -68,11 +50,6 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^1.0.0
 
   #hive
@@ -82,9 +59,11 @@ dev_dependencies:
   #splash
   flutter_native_splash: ^1.3.2
 
+
+
+
 # 변경사항 필요시 flutter pub run flutter_native_splash:create 와 remove 사용
 # 변경시에 ** 먼저 remove로 지워준 후 변경사항이 된 버전을 다시 create로 등록해야 함 주의 **
-
 flutter_native_splash:
 
   # This package generates native code to customize Flutter's default white native splash screen
@@ -201,6 +180,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/YaksokLogo.png
+    - assets/medicinedata/200808876.jpg
+    - assets/medicinedata/200808877.jpg
+    - assets/medicinedata/200808948.jpg
+    - assets/medicinedata/200809076.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -222,6 +205,3 @@ flutter:
           weight: 500
         - asset: assets/fonts/GmarketSansTTF/GmarketSansTTFBold.ttf
           weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
